[gd_scene load_steps=18 format=3 uid="uid://cgid7se2ivos1"]

[ext_resource type="Script" path="res://Character/CharacterControllerRigid.gd" id="1_g444q"]
[ext_resource type="Texture2D" uid="uid://djmqd6rlqxlen" path="res://Art/Character/Character-sheet.png" id="2_66l1w"]
[ext_resource type="Texture2D" uid="uid://kde3bwyos17j" path="res://Art/Character/Push.png" id="2_c2f0r"]
[ext_resource type="Script" path="res://Character/Kick.gd" id="3_wmrr5"]
[ext_resource type="AudioStream" uid="uid://cqdhsbc55nd47" path="res://Sounds/SoundEffects/SFX_Jump_09.wav" id="5_taerx"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_ucitp"]
friction = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nmf7b"]
size = Vector2(24, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_80yr3"]
size = Vector2(10, 8)

[sub_resource type="Animation" id="Animation_jkq5l"]
resource_name = "Kick"
length = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_c2f0r")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("KickHitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Sprite2D:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_sfwr2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_c2f0r")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("KickHitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Sprite2D:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0el5a"]
_data = {
"Kick": SubResource("Animation_jkq5l"),
"RESET": SubResource("Animation_sfwr2")
}

[sub_resource type="Animation" id="Animation_t7f12"]
resource_name = "Fall"
length = 0.4
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.23),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [8, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_66l1w")]
}

[sub_resource type="Animation" id="Animation_goymf"]
resource_name = "Idle"
length = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_66l1w")]
}

[sub_resource type="Animation" id="Animation_w3neo"]
resource_name = "Jump"
length = 0.3
loop_mode = 2
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.01, 0.06, 0.11, 0.19, 0.26),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 2, 3, 4, 5, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_66l1w")]
}

[sub_resource type="Animation" id="Animation_lwpw6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_66l1w")]
}

[sub_resource type="Animation" id="Animation_t8ab8"]
resource_name = "RunCycle"
length = 0.5
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [11, 11, 12, 13, 14]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_66l1w")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eevqr"]
_data = {
"Fall": SubResource("Animation_t7f12"),
"Idle": SubResource("Animation_goymf"),
"Jump": SubResource("Animation_w3neo"),
"RESET": SubResource("Animation_lwpw6"),
"RunCycle": SubResource("Animation_t8ab8")
}

[node name="PlayerBody" type="RigidBody2D" groups=["Player"]]
z_index = 1
collision_layer = 17
mass = 0.5
physics_material_override = SubResource("PhysicsMaterial_ucitp")
lock_rotation = true
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_g444q")
speed = 300.0
acceleration = 20000.0
decceleration = 10000.0
velocityPow = 0.5
jump_strength = 13000.0
jump_cancel_modifier = 1.3
gravity_multiplier = 1.07
fall_clamp = 1000.0
scale_effect = 700.0

[node name="CharacterBody" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_nmf7b")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.71875, 0.71875)
texture = ExtResource("2_66l1w")
hframes = 4
vframes = 4
frame = 8

[node name="Kick" type="Node2D" parent="."]
script = ExtResource("3_wmrr5")

[node name="KickHitbox" type="Area2D" parent="Kick"]
position = Vector2(-0.5, 0.140625)
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kick/KickHitbox"]
position = Vector2(10, 3)
shape = SubResource("RectangleShape2D_80yr3")
disabled = true

[node name="KickPlayer" type="AnimationPlayer" parent="Kick"]
libraries = {
"": SubResource("AnimationLibrary_0el5a")
}

[node name="PlayerAnimations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_eevqr")
}

[node name="CheckGrounded" type="RayCast2D" parent="."]
position = Vector2(-8.725, -0.04)
target_position = Vector2(0, 14)

[node name="CheckGrounded2" type="RayCast2D" parent="."]
position = Vector2(9.055, -0.04)
target_position = Vector2(0, 14)

[node name="LaunchTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="PhysicsCheck" type="RayCast2D" parent="."]
target_position = Vector2(0, 14)
collision_mask = 8

[node name="JumpBuffer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="sfx_jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_taerx")
volume_db = -13.277
pitch_scale = 1.05

[node name="sfx_kick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_taerx")
volume_db = -4.426
pitch_scale = 2.42

[connection signal="timeout" from="JumpBuffer" to="." method="_on_jump_buffer_timeout"]
